[gd_scene load_steps=27 format=2]

[ext_resource path="res://DUNGEON/Modular Dungeon/OBJ/Arch_bars.obj" type="ArrayMesh" id=1]
[ext_resource path="res://enemyMaster.gd" type="Script" id=2]
[ext_resource path="res://DUNGEON/Script/dungeon1lowpoly.gd" type="Script" id=3]
[ext_resource path="res://Entita/Nemici/scheletro.tscn" type="PackedScene" id=4]
[ext_resource path="res://DUNGEON/Scene Principali/Item.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entita/player/player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Dungeon1/dungeon1lowpoly.glb" type="PackedScene" id=7]
[ext_resource path="res://DUNGEON/Scene Principali/Coins.tscn" type="PackedScene" id=8]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )

[sub_resource type="PlaneMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.0627451, 0.0666667, 0.117647, 1 )

[sub_resource type="PlaneMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.0627451, 0.0666667, 0.117647, 1 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.310431, 0.309989, 0.792973 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 3.04928, 7.86023, 3.09367 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 2.48543, 3.1332, 4.82259 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 1.81783, 1.53305, 2.14254 )

[sub_resource type="BoxShape" id=11]
extents = Vector3( 1.81159, 0.91606, 4.44267 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 1.28196, 1.17154, 2.12857 )

[sub_resource type="BoxShape" id=13]
extents = Vector3( 0.887691, 0.00997429, 1.04306 )

[sub_resource type="BoxShape" id=14]
extents = Vector3( 6.72602, 6.31327, 0.301872 )

[sub_resource type="NavigationMesh" id=15]
vertices = PoolVector3Array( 0.651058, 0, 0.81935, 1, 0, 0.755356, 1, 0, 0.587414, 0.657331, 0, 0.593949, -0.49537, 0, -0.41174, -0.485696, 0, 0.817176, -0.0149797, 0, 0.812328, 0, 0, -1, -0.5, 0, -1, -0.498219, 0, -0.773778, -0.417742, 0, -0.774474, -0.367175, 0, -0.77609, -0.378011, 0, -0.410834, -0.701831, 0, 0.77048, -0.734338, 0, -0.413583, 0, 0, -1, -0.0149797, 0, 0.812328, 0.405689, 0, 0.820349, 0.470359, 0, -0.427872, 0.408569, 0, -0.427225, 0.410736, 0, -0.776319, 0.488344, 0, -0.775016, 0.5, 0, -1, 0.410505, 0, 1.0054, -0.0101637, 0, 0.997379, -0.00233768, 0, 1.21475, 0.418331, 0, 1.22278, -0.0101637, 0, 0.997379, -0.464627, 0, 0.999803, -0.440547, 0, 1.21475, -0.00233768, 0, 1.21475, -1.00099, 0, -0.550581, -1.00374, 0, 0.691681, -0.797003, 0, -0.414067, -0.794815, 0, -0.558341, 0.470359, 0, -0.427872, 0.405689, 0, 0.820349, 0.67685, 0, -0.107478, 0.685829, 0, -0.430127, -0.485696, 0, 0.817176, 0.643781, 0, 1.00405, 0.488344, 0, -0.775016, 0.69533, 0, -0.771544, 0.701238, 0, -0.983838, 0.5, 0, -1, 1, 0, -0.118697, 1, 0, -1, 0.757489, 0, -0.7705, 0.78783, 0, -0.7705, 0.779161, 0, -0.431104, -0.564068, 0, 0.999803, -0.464627, 0, 0.999803 )
polygons = [ PoolIntArray( 0, 2, 1 ), PoolIntArray( 0, 3, 2 ), PoolIntArray( 4, 6, 5 ), PoolIntArray( 7, 9, 8 ), PoolIntArray( 9, 11, 10 ), PoolIntArray( 12, 6, 4 ), PoolIntArray( 7, 11, 9 ), PoolIntArray( 11, 6, 12 ), PoolIntArray( 6, 11, 7 ), PoolIntArray( 13, 4, 5 ), PoolIntArray( 13, 14, 4 ), PoolIntArray( 15, 17, 16 ), PoolIntArray( 17, 19, 18 ), PoolIntArray( 20, 22, 21 ), PoolIntArray( 15, 19, 17 ), PoolIntArray( 20, 15, 22 ), PoolIntArray( 19, 15, 20 ), PoolIntArray( 23, 25, 24 ), PoolIntArray( 23, 26, 25 ), PoolIntArray( 27, 29, 28 ), PoolIntArray( 27, 30, 29 ), PoolIntArray( 31, 13, 32 ), PoolIntArray( 13, 33, 14 ), PoolIntArray( 33, 31, 34 ), PoolIntArray( 13, 31, 33 ), PoolIntArray( 35, 0, 36 ), PoolIntArray( 3, 38, 37 ), PoolIntArray( 35, 3, 0 ), PoolIntArray( 3, 35, 38 ), PoolIntArray( 16, 28, 39 ), PoolIntArray( 16, 27, 28 ), PoolIntArray( 36, 24, 6 ), PoolIntArray( 36, 23, 24 ), PoolIntArray( 36, 0, 23 ), PoolIntArray( 0, 40, 23 ), PoolIntArray( 41, 43, 42 ), PoolIntArray( 41, 44, 43 ), PoolIntArray( 38, 45, 37 ), PoolIntArray( 46, 42, 43 ), PoolIntArray( 42, 48, 47 ), PoolIntArray( 49, 45, 38 ), PoolIntArray( 46, 48, 42 ), PoolIntArray( 48, 45, 49 ), PoolIntArray( 45, 48, 46 ), PoolIntArray( 50, 5, 51 ), PoolIntArray( 50, 13, 5 ) ]

[sub_resource type="SpatialMaterial" id=16]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="BoxShape" id=17]
extents = Vector3( 1.85375, 2.12044, 1.8452 )

[sub_resource type="Animation" id=18]
resource_name = "animazioneSbarre"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sbarre:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 17.6583, 3.4195, 9.57083 ), Vector3( 17.6583, 8.21897, 9.57083 ) ]
}

[node name="dungeon1" instance=ExtResource( 7 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 1.86256, 0, 9.84001 )
script = ExtResource( 3 )

[node name="Plane" parent="." index="1"]
transform = Transform( -14.415, 4.31802e-07, 0, -5.06239e-06, -1, 0, 0, 0, 18, 16.9627, 2.83029, 12.4117 )
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="2"]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="." index="3"]
transform = Transform( 0.0499538, -0.673297, 0.737683, 0.0454894, 0.739372, 0.671758, -0.997715, -1.37227e-07, 0.0675623, 55.4204, 34.6187, 2.31466 )
shadow_enabled = true

[node name="Piano" type="MeshInstance" parent="." index="4"]
transform = Transform( 14.5, 0, 0, 0, 20, 0, 0, 0, 16, 17.039, 0, 13.2296 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Piano2" type="MeshInstance" parent="." index="5"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 1.6, 17.056, 0, 30.7873 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="StaticBody" type="StaticBody" parent="." index="6"]
visible = false

[node name="Muro" type="CollisionShape" parent="StaticBody" index="0"]
transform = Transform( 1, 0, 0, 0, 20, 0, 0, 0, 20, -0.656237, 6.61717, 9.93443 )
shape = SubResource( 7 )

[node name="Muro2" type="CollisionShape" parent="StaticBody" index="1"]
transform = Transform( 1, 0, 0, 0, 20, 0, 0, 0, 20, 34.4685, 6.61717, 9.93443 )
shape = SubResource( 7 )

[node name="Colonna" type="CollisionShape" parent="StaticBody" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.50723, 8.51496, 1.27849 )
shape = SubResource( 8 )

[node name="Colonna2" type="CollisionShape" parent="StaticBody" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 25.3188, 8.51496, 1.27849 )
shape = SubResource( 8 )

[node name="Crate" type="CollisionShape" parent="StaticBody" index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 31.3296, 4.05677, -0.588062 )
shape = SubResource( 9 )

[node name="Botti" type="CollisionShape" parent="StaticBody" index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.64011, 2.08673, 9.6133 )
shape = SubResource( 10 )

[node name="Bauli" type="CollisionShape" parent="StaticBody" index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.64106, 1.27422, 18.5131 )
shape = SubResource( 11 )

[node name="Bauli2" type="CollisionShape" parent="StaticBody" index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.76664, 1.48105, 19.4625 )
shape = SubResource( 12 )

[node name="Piano" type="CollisionShape" parent="StaticBody" index="8"]
transform = Transform( 20, 0, 0, 0, 20, 0, 0, 0, 20, 16.8855, -0.217683, 14.9176 )
shape = SubResource( 13 )

[node name="MuroArco" type="CollisionShape" parent="StaticBody" index="9"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26.6077, 6.77937, -5.77254 )
shape = SubResource( 14 )

[node name="MuroArco2" type="CollisionShape" parent="StaticBody" index="10"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.16882, 6.87058, -5.77254 )
shape = SubResource( 14 )

[node name="enemyMaster" type="Node" parent="." index="7"]
script = ExtResource( 2 )

[node name="Navigation" type="Navigation" parent="enemyMaster" index="0"]

[node name="PlaneMesh" type="NavigationMeshInstance" parent="enemyMaster/Navigation" index="0"]
transform = Transform( 14.415, 3.25841e-07, -5.86514e-06, 4.697e-06, -1, 0, -4.697e-06, -1.06173e-13, -18, -15.5477, 2.83029, -2.84903 )
navmesh = SubResource( 15 )

[node name="Combattente" parent="enemyMaster" index="1" instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, -0.000349066, 0, 0.5, 0, 0.000349066, 0, 0.5, -13.5404, 1.45168, 3.77214 )

[node name="Combattente2" parent="enemyMaster" index="2" instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -17.5803, 1.57173, 3.61193 )

[node name="Combattente3" parent="enemyMaster" index="3" instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -15.002, 1.6676, 7.23225 )

[node name="Combattente4" parent="enemyMaster" index="4" instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -11.503, 0.895318, 7.34106 )

[node name="AreaSbarre" type="Area" parent="." index="8"]
transform = Transform( 1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, -4.31031, -4.18338, -18.3321 )
__meta__ = {
"_edit_group_": true
}

[node name="Sbarre" type="MeshInstance" parent="AreaSbarre" index="0"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 17.6583, 3.4195, 9.57083 )
mesh = ExtResource( 1 )
material/0 = SubResource( 16 )

[node name="CollisionShape" type="CollisionShape" parent="AreaSbarre" index="1"]
transform = Transform( 1, 0, -2.84217e-14, 0, 1, 0, 2.84217e-14, 0, 1, 17.7249, 5.98844, 11.014 )
shape = SubResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="AreaSbarre" index="2"]
anims/animazioneSbarre = SubResource( 18 )

[node name="CameraSbarre" type="Camera" parent="AreaSbarre" index="3"]
transform = Transform( 0.667027, -0.106632, 0.488005, 0.0143519, 0.81788, 0.159094, -0.499313, -0.11894, 0.656494, 21.2494, 7.57676, 16.8222 )
fov = 57.1535

[node name="player" parent="." index="9" instance=ExtResource( 6 )]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 18.2498, 2.7841, 31.8445 )

[node name="coins" type="Node" parent="." index="10"]

[node name="coin" parent="coins" index="0" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.0001, 1.23757, -0.0674775 )

[node name="coin5" parent="coins" index="1" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.9696, 1.23757, -0.0674775 )

[node name="coin4" parent="coins" index="2" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.00197, 1.23757, -0.0674775 )

[node name="coin3" parent="coins" index="3" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.001, 1.23757, -0.0674775 )

[node name="coin2" parent="coins" index="4" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.9645, 1.27596, 0 )

[node name="coin6" parent="coins" index="5" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -21.0064, 1.23757, -3.05378 )

[node name="coin7" parent="coins" index="6" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.9759, 1.23757, -3.05378 )

[node name="coin8" parent="coins" index="7" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.0083, 1.23757, -3.05378 )

[node name="coin9" parent="coins" index="8" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.0073, 1.23757, -3.05378 )

[node name="coin10" parent="coins" index="9" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22.9708, 1.27596, -2.9863 )

[node name="coin11" parent="coins" index="10" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.0084, 1.23757, -6.05304 )

[node name="coin12" parent="coins" index="11" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.97789, 1.23757, -6.05304 )

[node name="coin13" parent="coins" index="12" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.01026, 1.23757, -6.05304 )

[node name="coin14" parent="coins" index="13" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.0093, 1.23757, -6.05304 )

[node name="coin15" parent="coins" index="14" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.9727, 1.27596, -5.98557 )

[node name="coin16" parent="coins" index="15" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -21.0527, 1.23757, -9.00652 )

[node name="coin17" parent="coins" index="16" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.0222, 1.23757, -9.00652 )

[node name="coin18" parent="coins" index="17" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.0546, 1.23757, -9.00652 )

[node name="coin19" parent="coins" index="18" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.0537, 1.23757, -9.00652 )

[node name="coin20" parent="coins" index="19" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -23.0171, 1.27596, -8.93904 )

[node name="items" type="Node" parent="." index="11"]

[node name="Item" parent="items" index="0" instance=ExtResource( 5 )]
transform = Transform( -6.51683e-08, 0.2, 0.34641, 0, 0.34641, -0.2, -0.4, -3.25841e-08, -5.64374e-08, -30.7625, 0.78266, 4.94077 )

[node name="Item2" parent="items" index="1" instance=ExtResource( 5 )]
transform = Transform( -6.51683e-08, 0.2, 0.34641, 0, 0.34641, -0.2, -0.4, -3.25841e-08, -5.64374e-08, -30.7625, 0.78266, 2.94633 )

[node name="Item3" parent="items" index="2" instance=ExtResource( 5 )]
transform = Transform( -6.51683e-08, 0.2, 0.34641, 0, 0.34641, -0.2, -0.4, -3.25841e-08, -5.64374e-08, -30.7625, 0.78266, 0.95189 )

[node name="Item4" parent="items" index="3" instance=ExtResource( 5 )]
transform = Transform( -6.51683e-08, 0.2, 0.34641, 0, 0.34641, -0.2, -0.4, -3.25841e-08, -5.64374e-08, -30.7625, 0.78266, -0.99722 )

[node name="Item5" parent="items" index="4" instance=ExtResource( 5 )]
transform = Transform( -6.51683e-08, 0.2, 0.34641, 0, 0.34641, -0.2, -0.4, -3.25841e-08, -5.64374e-08, -30.7625, 0.78266, -2.94633 )

[node name="Item6" parent="items" index="5" instance=ExtResource( 5 )]
transform = Transform( -6.51683e-08, 0.2, 0.34641, 0, 0.34641, -0.2, -0.4, -3.25841e-08, -5.64374e-08, 0.332582, 0.78266, 14.4597 )

[node name="Item7" parent="items" index="6" instance=ExtResource( 5 )]
transform = Transform( -6.51683e-08, 0.2, 0.34641, 0, 0.34641, -0.2, -0.4, -3.25841e-08, -5.64374e-08, 0.332582, 0.78266, 12.4652 )

[node name="Item8" parent="items" index="7" instance=ExtResource( 5 )]
transform = Transform( -6.51683e-08, 0.2, 0.34641, 0, 0.34641, -0.2, -0.4, -3.25841e-08, -5.64374e-08, 0.332582, 0.78266, 10.4708 )

[node name="Item9" parent="items" index="8" instance=ExtResource( 5 )]
transform = Transform( -6.51683e-08, 0.2, 0.34641, 0, 0.34641, -0.2, -0.4, -3.25841e-08, -5.64374e-08, 0.332582, 0.78266, 8.52169 )

[node name="Item10" parent="items" index="9" instance=ExtResource( 5 )]
transform = Transform( -6.51683e-08, 0.2, 0.34641, 0, 0.34641, -0.2, -0.4, -3.25841e-08, -5.64374e-08, 0.332582, 0.78266, 6.57258 )
[connection signal="body_entered" from="AreaSbarre" to="." method="_on_AreaSbarre_body_entered"]
